# Bank-Management-System

./: .gitignore  CMakeLists.txt  README.md  run.sh  xyzbank.db
include/: Account.h  Dashboard.h  Database.h  GuiManager.h  Login.h  Teller.h  UserType.h
src/: Account.cpp  Bank.cpp  CMakeLists.txt  Dashboard.cpp  Database.cpp  GuiManager.cpp  Login.cpp  main.cpp
src/Gui/: Dashboard.cpp  Dashboard.h  Login.cpp  Login.h
src/app/: Bank.cpp  Database.cpp  GuiManager.cpp  Teller.cpp  main.cpp
src/app/Gui/: Login.cpp
src/app/include/: Bank.h  Database.h  Defs.h  GuiManager.h
